WTF rendering broke?!?

--- a/README
+++ b/README
@@ -5,4 +5,4 @@ multiplaying rpg
 control and survive an alien outbreak using many characters at once!
 
 
-it's a mulit-point and click adventure!™
+it's a multi-point and click adventure!™
