--- a/README
+++ b/README
@@ -2,7 +2,12 @@ LPC #1 coding entry
 
 multiplaying rpg
 
+
+
+TO TESTERS:  just run 'run.py'.
+*This game is changing and does not represent the finished product.
+
+
+
 control and survive an alien outbreak using many characters at once!
-
-
 it's a multi-point and click adventure!™
